tests/transpiler/x/hs/group_by.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/group_by.hs:30:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn show s.city
          ++
            " "
              ++
                ": count ="
                  ++
                    " "
                      ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age
      In the expression:
        do putStrLn show s.city
             ++
               " "
                 ++
                   ": count ="
                     ++
                       " "
                         ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age
      In the first argument of ‘mapM_’, namely
        ‘(\ s
            -> do putStrLn show s.city
                    ++
                      " "
                        ++
                          ": count ="
                            ++
                              " "
                                ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age)’
   |
30 |         putStrLn show s.city ++ " " ++ ": count =" ++ " " ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/group_by.hs:30:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show s.city’
      In a stmt of a 'do' block:
        putStrLn show s.city
          ++
            " "
              ++
                ": count ="
                  ++
                    " "
                      ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age
   |
30 |         putStrLn show s.city ++ " " ++ ": count =" ++ " " ++ show s.count ++ " " ++ ", avg_age =" ++ " " ++ show s.avg_age
   |                  ^^^^
